--- a/views/registerStaff.ejs
+++ b/views/registerStaff.ejs
@@ -20,7 +20,7 @@
   <div class="d-flex justify-content-between mb-3">
       
   <h5> <%= viewTitle -%></h5>
-  
+  <a class="btn  btn-warning btn-sm" href="#" onclick="window.history.back();"><i class="fa fa-arrow-left"></i> Back</a>
   <a class="btn btn-warning btn-sm" href="/view/staffList"><i class="fa fa-database"></i> View All Staff</a>
   
 </div>
