--- a/views/staffList.ejs
+++ b/views/staffList.ejs
@@ -14,6 +14,8 @@
   
   <% if(loggedIn) { %>
   
+  <a class="btn  btn-warning btn-sm" href="#" onclick="window.history.back();"><i class="fa fa-arrow-left"></i> Back</a>
+  
   <a class="btn  btn-warning btn-sm" href="/auth/registerStaff"><i class="fa fa-plus"></i> Add New Staff</a>
   
   <% } %>
