--- a/views/studentPage.ejs
+++ b/views/studentPage.ejs
@@ -267,13 +267,13 @@
                             
                         <tr>
                           
-                          <td colspan="6" class="text-end pt-3 pb-3">
+                          <td colspan="7" class="text-end py-3">
                             
                           <!--add monthly fee button-->   
                       
-                              <a class="text-dark shadow-sm p-2 rounded" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Enter Fee" href="/computer/<%= students._id %>/feeRegister">
+                              <a class="text-success shadow-sm p-2 rounded" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Enter Fee" href="/computer/<%= students._id %>/feeRegister">
                                 
-                                  <i class="fas fa-edit text-danger fw-bold">
+                                  <i class="fas fa-edit text-secondary fw-bold">
                                     
                                   </i> 
                                   
@@ -369,13 +369,13 @@
                             
                         <tr>
                           
-                          <td colspan="6" class="text-end pt-3 pb-3">
+                          <td colspan="7" class="text-end py-3">
                             
                           <!--add exam fee button-->   
                       
-                              <a class="text-dark shadow-sm p-2 rounded" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Enter Fee" href="/computer/<%= students._id %>/examFeeRegister">
+                              <a class="text-success shadow-sm p-2 rounded" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Enter Fee" href="/computer/<%= students._id %>/examFeeRegister">
                                 
-                                  <i class="fas fa-edit text-danger fw-bold">
+                                  <i class="fas fa-edit text-secondary fw-bold">
                                     
                                   </i> 
                                   
@@ -465,15 +465,13 @@
                             
                         <tr>
                           
-                          <td colspan="5" class="text-end pt-3 pb-3"></td>
-                          
-                          <td colspan="1" class="text-start pt-3 pb-3">
+                          <td colspan="6" class="text-end py-3">
                             
                           <!--add other fee button-->   
                       
-                              <a class="text-dark shadow-sm p-2 rounded" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Enter Fee" href="/computer/<%= students._id %>/otherFeeRegister">
+                              <a class="text-success shadow-sm p-2 rounded" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Enter Fee" href="/computer/<%= students._id %>/otherFeeRegister">
                                 
-                                  <i class="fas fa-edit text-danger fw-bold shadow">
+                                  <i class="fas fa-edit text-secondary fw-bold shadow">
                                     
                                   </i> 
                                   
@@ -498,86 +496,12 @@
           </div> <!--fee table end-->
           
           
-          
-          <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-              
-               <ul class="list-group">
-               
-               
-               <table class="table bg-white border-e table-responsive studentTable">
-                  
-                  <tbody>
-                      
-                    <tr class="text-center">
-                        
-                      <th class="p-3" colspan="6">Assignment</th>
-                      
-                    </tr>
-                    
-                    <tr>
-                      
-                      <td class="text-primary">Name of Student</td>
-                      
-                      <td> : </td>
-                      
-                      <td>Lalnunhlima Mapuia</td>
-                      
-                      <td class="text-primary">Father's Name</td>
-                      
-                      <td> : </td>
-                      
-                      <td>Phunkara</td>
-                      
-                    </tr>
-                    
-                    <tr>
-
-                      <td class="text-primary">Present Address</td>
-                      
-                      <td> : </td>
-                      
-                      <td>Mission Vengthlang, Aizawl</td>
-                      
-                      <td class="text-primary">Mobile No. </td>
-                      
-                      <td> : </td>
-                      
-                      <td> 9612359711</td>
-                      
-                    </tr>
-                    
-                    <tr>
-                      
-                      <td class="text-primary">Date of Birth</td>
-                      
-                      <td> : </td>
-                      
-                      <td>Lalnunhlima Mapuia</td>
-                      
-                      <td class="text-primary">Registration No.</td>
-                      
-                      <td> : </td>
-                      
-                      <td> 1 </td>
-                      
-                    </tr>
-                    
-                  </tbody>
-                  
-                </table>
-               
-            </ul>
-              
-          </div>
+        
           
         </div>
         
     </main>
 
-<!-- --------------fee details------------------ -->
-    <div class="container">
-        
-    </div>
 
     <%- include('layouts/scripts') -%>
     
