--- a/views/viewExamFeeReceived.ejs
+++ b/views/viewExamFeeReceived.ejs
@@ -60,6 +60,7 @@
                     </tr>
                     
               <%  
+                        var serialNos = 0;
               
                             for (var i=0; i < students.length; i++) {
                                 
@@ -68,13 +69,14 @@
                                 for (var k=0; k < students[i].studentExamFee.length; k++) {
                  
                                     if(students[i].studentExamFee[k] != undefined && students[i].studentExamFee[k].dateofpayment >=  moment().format('2021-01-01')) {
-              
+                                            
+                                            serialNos++;
               
               %>
               
                         <tr>
                           
-                          <td class="text-center border" ><%= i + 1 %></td>
+                          <td class="text-center border" ><%= serialNos %></td>
                           
                           <td class="text-center border" ><%= students[i].regn %></td>
                           
