font size decrease 80%

--- a/views/examFeeRegister.ejs
+++ b/views/examFeeRegister.ejs
@@ -50,7 +50,7 @@ body {
       
       <th scope="row" class="text-start fw-light"> Name of Student</th>
       
-      <td class="text-start text-primary" <a href="/computer/<%= students._id %>"><%= capitalizeFirstLetter(students.username) %></a></td>
+      <td class="text-start text-primary"><a href="/computer/<%= students._id %>"><%= capitalizeFirstLetter(students.username) %></a></td>
       
     </tr>
     
