--- a/public/css/style.css
+++ b/public/css/style.css
@@ -197,6 +197,18 @@ border-radius: 8px;
 /*-------------media query for video fullscreen-----------*/
 @media only screen and (max-width: 768px) {
   
+body {
+  
+  font-size: 95%;
+  
+}
+
+tbody {
+  
+  font-size: 90%;
+  
+}
+  
 .navbar-nav > li > a {
   
   padding-left: 5px !important; 
