106 siamthat leh who test today siamthat

--- a/views/ejsFunction.ejs
+++ b/views/ejsFunction.ejs
@@ -165,4 +165,9 @@ findMaxInArray = function largest(dateArray) {
 }
  
 
+onlyUnique = function (value, index, self) {
+    
+                    return self.indexOf(value) === index;
+            }
+
 %>
