table head primary colour

--- a/views/assignmentCheckScore.ejs
+++ b/views/assignmentCheckScore.ejs
@@ -34,9 +34,9 @@
       
       <!-- --------------assignment record table------------------ -->
     
-      <div class="shadow-sm mx-auto fs-5 fw-normal mb-0 text-center border p-2 mt-3 mb-3" style="max-width: 450px"> 
+      <div class="shadow-sm mx-auto fs-6 fw-bold mb-0 text-center border p-2 mt-3 mb-3" style="max-width: 450px"> 
       
-       <%= thisStudent.username %>'s Assignment Record </div>
+       <%= thisStudent.username %>'s Record </div>
       
  <div class="row bg-white p-2">
    
@@ -48,7 +48,7 @@
             
             <tr>
               
-              <td colspan="2" class="fw-bold border text-center mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border"></i> DCA-101 : Fundamentals of Computer </td>
+              <td colspan="2" class="fw-bold border text-center bg-primary text-white mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border"></i> DCA-101 : Fundamentals of Computer </td>
               
             </tr>
             
@@ -356,7 +356,7 @@
             
             <tr>
               
-              <td colspan="2" class="fw-bold border text-center mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border"></i> DCA-102 : Operating System </td>
+              <td colspan="2" class="fw-bold border text-center bg-primary text-white mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border"></i> DCA-102 : Operating System </td>
               
             </tr>
             
@@ -672,7 +672,7 @@
             
             <tr>
               
-              <td colspan="2" class="fw-bold border text-center mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border"></i> DCA-103 : Office Automation Software </td>
+              <td colspan="2" class="fw-bold border text-center bg-primary text-white mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border"></i> DCA-103 : Office Automation Software </td>
               
             </tr>
             
@@ -1255,7 +1255,7 @@
             
             <tr>
               
-              <td colspan="2" class="fw-bold border text-center mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border"></i> DCA-104 : Internet Technology </td>
+              <td colspan="2" class="fw-bold border text-center bg-primary text-white mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border"></i> DCA-104 : Internet Technology </td>
               
             </tr>
             
@@ -1456,7 +1456,7 @@
             
             <tr>
               
-             <td colspan="2" class="fw-bold border text-center mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border"></i> DCA-105 : Computer Graphics </td>
+             <td colspan="2" class="fw-bold border text-center bg-primary text-white mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border"></i> DCA-105 : Computer Graphics </td>
               
             </tr>
             
@@ -1837,7 +1837,7 @@
             
             <tr>
               
-              <td colspan="2" class="fw-bold border text-center mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border"></i> DCA-106 : Desktop Publishing </td>
+              <td colspan="2" class="fw-bold border text-center bg-primary text-white mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border"></i> DCA-106 : Desktop Publishing </td>
               
             </tr>
             
