--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -31,9 +31,9 @@
               
              <tr>
               
-              <td colspan="3" class="fw-normal fs-6 bgColor bg-light border text-center">
+              <td colspan="3" class="fw-normal fs-6 bg-primary text-white border text-center">
                   
-                  <i class="fas fa-clock text-dark"></i> Your latest record </td>
+                  <i class="fas fa-clock text-white"></i> Your latest record </td>
               
             </tr>
             
@@ -180,9 +180,9 @@
               
              <tr>
               
-              <td colspan="3" class="fw-normal fs-6 bgColor border bg-light text-center">
+              <td colspan="3" class="fw-normal fs-6 border bg-primary text-white text-center">
                   
-                  <i class="fas fa-user-check text-dark"></i> Verify assignment </td>
+                  <i class="fas fa-user-check text-white"></i> Verify assignment </td>
               
             </tr>
             
@@ -222,9 +222,9 @@
               
               <tr>
               
-              <td colspan="5" class="fw-normal fs-6 bgColor border bg-light mb-2">
+              <td colspan="5" class="fw-normal fs-6 border bg-primary text-white text-center mb-2">
                   
-                  <i class="fas fa-user-friends text-dark ps-2"></i> Students' who test today </td>
+                  <i class="fas fa-user-friends text-white ps-2"></i> Students' who test today </td>
               
             </tr>
             
