--- a/views/stdTopPerformers.ejs
+++ b/views/stdTopPerformers.ejs
@@ -48,9 +48,9 @@
             
             <tr>
               
-              <td colspan="6" class="fs-5 fw-bold text-secondary border bg-light m-2 p-2 text-center"> 
+              <td colspan="6" class="fs-6 fw-bold border text-primary m-2 p-2 text-center"> 
               
-              <i class="far fa-stop-circle bgGradientBlue text-white border p-0 me-2"></i> Assignment chhangtute List <i class="far fa-stop-circle bgGradientBlue text-white border p-0 ms-2"></i></td>
+              <i class="far fa-stop-circle bgGradientBlue text-white border p-0 me-1"></i> Assignment chhangtu List <i class="far fa-stop-circle bgGradientBlue text-white border p-0 ms-1"></i></td>
               
             </tr>
             
@@ -59,8 +59,6 @@
               <th class="fw-normal  border small"> Sl</th>
               
               <th class="fw-normal  border small"> Name of Student</th>
-              
-              <th class="fw-normal  border small"> Father's Name</th>
               
               <th class="fw-normal  border small"> Address</th>
               
@@ -105,8 +103,6 @@
                                 <%= capitalizeFirstLetter(Students[i].username) %>
                             
                           </td>
-                          
-                          <td class="border ps-2"> <%= Students[i].fname %> </td>
                           
                           <td class="border ps-2"> <%= Students[i].address %> </td>
                           
