--- a/views/assignmentCheckScore.ejs
+++ b/views/assignmentCheckScore.ejs
@@ -5,9 +5,7 @@
 <%- include('layouts/headers') -%>
 
 
-<body class="bg-light">
-    
-    <%- include('layouts/navbar') -%>
+<body>
     
     <%- include ('ejsFunction') %> <!--function javascript ejs-->
     
@@ -34,7 +32,7 @@
       
       <!-- --------------assignment record table------------------ -->
     
-      <div class="shadow-sm mx-auto fs-6 fw-bold mb-0 text-center border p-2 mt-3 mb-3" style="max-width: 450px"> 
+      <div class="shadow-sm mx-auto fs-6 fw-bold mb-0 text-center border p-2 mt-4 mb-3" style="max-width: 450px"> 
       
        <%= thisStudent.username %>'s Record </div>
       
