--- a/views/dca102onlineclasschapter7.ejs
+++ b/views/dca102onlineclasschapter7.ejs
@@ -4,7 +4,7 @@
   
 <%- include('layouts/headers') -%>
 
-<body class="bg-light">
+<body>
     
     <%- include('layouts/navbar') -%>
     
@@ -424,9 +424,9 @@ d) All of the above statement is true }
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-scrollable">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">A hnuaia zawhna te hi chhang rawh</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      <div class="modal-header bg-primary">
+        <h5 class="modal-title text-white" id="staticBackdropLabel">A hnuaia zawhnate hi chhang rawh</h5>
+        <button type="button" class="btn-close bg-white" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         
