--- a/views/ejsFunction.ejs
+++ b/views/ejsFunction.ejs
@@ -42,7 +42,7 @@ while (num.length > 0) // Loop through string
 
 capitalizeFirstLetter = function(inputName) {
   
-          if(inputName != undefined) {
+          if(inputName != undefined && inputName.charAt(0) === inputName.charAt(0).toLowerCase()) {
             
                 var text = inputName;
           
