--- a/views/home.ejs
+++ b/views/home.ejs
@@ -44,15 +44,15 @@
             
             <div class="card rounded fw-normal text-dark borderTop shadow-sm">
               
-            <div class="card-header py-3">
-            <h4 class="my-0 fw-normal text-center bgColor">Theory</h4>
+            <div class="card-header py-2 bg-light">
+            <h4 class="my-0 fw-bold text-center text-primary">Theory</h4>
             </div>
           
             <p class="card-text text-justify fw-normal text-dark px-3 pt-2"> Question hlui behchhana siam a ni. Online assignment a awm zel bawk... </p>
             
             <img src="img/syllabus.png" class="card-img-top mx-auto" alt="syllabus" style="height:150px; width:200px">
             
-             <div class="mx-auto mb-3 mt-3"><a href="std/loginStudent"><button class="btn text-center text-info border homeLinkButton"> Login to Explore <i class="fas fa-arrow-right"></i></button></a></div>
+             <div class="mx-auto mb-3 mt-3"><a href="std/loginStudent"><button class="btn text-center text-primary border homeLinkButton"> Login to Explore <i class="fas fa-arrow-right"></i></button></a></div>
           
             </div>
 
@@ -63,8 +63,8 @@
                       
             <div class="card rounded fw-normal text-dark borderTop shadow-sm">
               
-          <div class="card-header py-3">
-          <h4 class="my-0 fw-normal text-center bgColor">Practical</h4>
+          <div class="card-header py-2 bg-light">
+          <h4 class="my-0 fw-bold text-center text-primary">Practical</h4>
           </div>
                 
             <p class="card-text text-wrap fw-normal text-dark px-3 pt-2">Syllabus milin practical video dah a ni. En chunga tih ve zel theih a ni...</p>
@@ -81,15 +81,15 @@
               
             <div class="card rounded fw-normal text-dark borderTop shadow-sm">
               
-            <div class="card-header py-3">
-            <h4 class="my-0 fw-normal text-center bgColor">Download</h4>
+            <div class="card-header py-2 bg-light">
+            <h4 class="my-0 fw-bold text-center text-primary">Download</h4>
             </div>
                 
             <p class="card-text text-wrap fw-normal text-dark px-3 pt-2"> Study Material heng; question hlui, notebook etc,. te a awm...</p>
                 
                 <img src="img/questionBank.png" class="card-img-top mx-auto" alt="question bank" style="height:150px; width:200px">
                 
-                <div class="mx-auto mb-3 mt-3"><a href="std/loginStudent"><button class="btn text-center text-success border homeLinkButton"> Login to Explore <i class="fas fa-arrow-right"></i></button></a></div>                
+                <div class="mx-auto mb-3 mt-3"><a href="std/loginStudent"><button class="btn text-center text-primary border homeLinkButton"> Login to Explore <i class="fas fa-arrow-right"></i></button></a></div>                
                
               
             </div>
