--- a/views/layouts/studentMenu.ejs
+++ b/views/layouts/studentMenu.ejs
@@ -7,7 +7,7 @@
 <div class="d-flex justify-content-end mb-2">
     
         <!-- Button trigger modal -->
-            <a href="computer/<%= studentId %>" class="text-primary"> <button type="button" class="btn btn-sm btn-outline-secondary me-1"> Your Profile & Fee </button></a>
+            <a href="computer/<%= studentId %>" class="text-primary"> <button type="button" class="btn btn-sm btn-outline-secondary me-1"> My Profile & Fee </button></a>
             
             <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal">
               Learn Lessons
