--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -33,7 +33,7 @@
               
               <td colspan="3" class="fw-normal fs-6 bg-primary text-white border text-center">
                   
-                  <i class="fas fa-clock text-white"></i> Your latest record </td>
+                  <i class="fas fa-clock text-white"></i> My latest record </td>
               
             </tr>
             
@@ -193,14 +193,14 @@
                 <tr>
                     
                     <td colspan="3"><a href="stdScoreboard" class="text-muted fs-6 fw-normal">
-                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> Check your assignment record...</span></a></td>
+                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> My assignment record...</span></a></td>
                     
                 </tr>
                 
                 <tr>
                     
                     <td colspan="3"><a href="stdTopPerformers" class="text-muted fs-6 fw-normal">
-                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> Check other who answer assignment...</span></a></td>
+                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> Check other assignment...</span></a></td>
                     
                 </tr>
 
