--- a/views/dca105onlineclasschapter4.ejs
+++ b/views/dca105onlineclasschapter4.ejs
@@ -4,7 +4,7 @@
   
 <%- include('layouts/headers') -%>
 
-<body class="bg-light">
+<body>
     
     <%- include('layouts/navbar') -%>
     
@@ -155,10 +155,6 @@ Creating and Editing Layer Masks, Applying and Discarding Layer Masks.
                              chuan kan hmel a lo lang leh thin. Chutiang bawkin photoshop-a picture (thlalak etc) chu masking hmang hian kan duh lai lai kan khuhbo thei a ni.
                             Masking hi Eraser Tool nen a inang lo va, eraser tool chuan thlalak a tichhia a, masking chuan thlalak
                              a tichhe ve lo a ni. </p>
-                             
-                             <p>A hnuaia text section kaihhruaina khu i hriat thiam lehzual nan kan guidebook download ang che. Dashboard-ah khian let leh la, dashboard chung lam ding lam
-                             kilah download button a lo awm ang.</p>
-                             
                              
                               <figure class="figure">
   
@@ -448,9 +444,9 @@ the layer from the Channels palette to the Delete current channel button at the 
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-scrollable">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">A hnuaia zawhna te hi chhang rawh</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      <div class="modal-header bg-primary">
+        <h5 class="modal-title text-white" id="staticBackdropLabel">A hnuaia zawhnate hi chhang rawh</h5>
+        <button type="button" class="btn-close bg-white" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         
