--- a/views/stdTopPerformers.ejs
+++ b/views/stdTopPerformers.ejs
@@ -7,8 +7,6 @@
 
 <body class="bg-light">
     
-    <%- include('layouts/navbar') -%>
-    
     <%- include ('ejsFunction') %> <!--function javascript ejs-->
     
 
@@ -19,15 +17,13 @@
   
   <main>
 
- <div class="row">
+  <div class="row">
           
-           <div class="mx-auto mt-3">
+           <div class="mx-auto px-4 mt-3">
             
             <div class="d-flex justify-content-between">
             
-            <a href="stdDashboard" class="small text-secondary"> <i class="fas fa-home text-primary"></i> Dashboard</i> </a>
-            
-            <span class="float-end"> <%- include('layouts/subjectMenuTheory') -%> </span>
+            <a href="#" onclick="window.history.back();" class="small text-secondary"> <i class="fas fa-arrow-left pe-2"></i> Back </i> </a>
             
             </div>
             
@@ -48,9 +44,9 @@
             
             <tr>
               
-              <td colspan="6" class="fs-6 fw-bold border text-primary m-2 p-2 text-center"> 
+              <td colspan="6" class="fs-6 fw-bold border bg-primary text-white m-2 p-2 text-center"> 
               
-              <i class="far fa-stop-circle bgGradientBlue text-white border p-0 me-1"></i> Assignment chhangtu List <i class="far fa-stop-circle bgGradientBlue text-white border p-0 ms-1"></i></td>
+              <i class="far fa-stop-circle bgGradientBlue text-white border p-0 me-1"></i> Assignment chhangtu list <i class="far fa-stop-circle bgGradientBlue text-white border p-0 ms-1"></i></td>
               
             </tr>
             
